--- a/in-stock-app/server/package.json
+++ b/in-stock-app/server/package.json
@@ -3,20 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "cd in-stock-app && npm start",
-    "server": "node server/index.js",
+    "start": "node index.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "openai": "^4.89.0"
   }
 }
