--- a/in-stock-app/package.json
+++ b/in-stock-app/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server/index.js",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "build": "react-scripts build",  
+    "heroku-postbuild": "npm install && npm run build"  
   },
   "engines": {
-    "node": "22.14"  
+    "node": "22.x",
+    "npm": "10.x"
+  },
+  "dependencies": {
+    
   }
 }
