--- a/in-stock-app/server/package.json
+++ b/in-stock-app/server/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "server",
+  "name": "in-stock-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "node index.js",  
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm run build"
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.14.0",
-    "openai": "^4.89.0"
+    "express": "^4.18.2",
+    "mysql2": "^3.9.7",
+    "cors": "^2.8.5"
   }
 }
