--- a/in-stock-app/package.json
+++ b/in-stock-app/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "in-stock-app-full",
+  "name": "in-stock-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "node server/index.js",
-    "build": "react-scripts build",  
-    "heroku-postbuild": "npm install && npm run build"  
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm install && npm run build"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.9.7",
+    "cors": "^2.8.5",
+    "react": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "engines": {
     "node": "22.x",
     "npm": "10.x"
-  },
-  "dependencies": {
-    
   }
 }
