--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "heroku-postbuild": "npm install && npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.9.7",
-    "cors": "^2.8.5",
-    "react": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "mysql2": "3.9.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "4.9.5"
   },
   "engines": {
     "node": "22.x",
