--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,13 @@
 {
   "name": "in-stock-app",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "start": "node server/index.js",
-    "build": "react-scripts build",
+    "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "engines": {
     "node": "22.x",
     "npm": "10.x"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.9.7",
-    "cors": "^2.8.5"
   }
 }
